--- a/pom.xml
+++ b/pom.xml
@@ -36,19 +36,27 @@
             <version>2.13</version>
         </dependency>
         
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20180130</version>
+		</dependency>
+        
+        
                 <!-- Spring framework -->
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring</artifactId>
-		<version>2.5.6</version>
-	</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring</artifactId>
+			<version>2.5.6</version>
+		</dependency>
     
                 <!-- MS SQL database driver -->
-	<dependency>
+		<dependency>
                 <groupId>com.microsoft.sqlserver</groupId>
                 <artifactId>mssql-jdbc</artifactId>
                 <version>6.5.2.jre8-preview</version>
-	</dependency>
+		</dependency>
     </dependencies>
 
     <build>
